--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,10 @@
   color: #333;
 }
 
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 a {
   text-decoration: none;
   transition: all 0.2s;
@@ -87,4 +91,369 @@ a:hover > b {
 }
 .text-yellow {
   color: #f98500;
+}
+.app {
+  width: 1200px;
+}
+@media (max-width: 1199.98px) {
+  .app {
+    width: 992px;
+  }
+}
+@media (max-width: 991.98px) {
+  .app {
+    width: 768px;
+  }
+}
+@media (max-width: 767.98px) {
+  .app {
+    width: 576px;
+  }
+}
+@media (max-width: 575.98px) {
+  .app {
+    width: calc(100% - 30px);
+    padding: 0px 15px;
+  }
+}
+
+.header-logo {
+  float: left;
+  margin: 30px 0;
+}
+
+.header-menu {
+  float: right;
+}
+
+.header-menu-item {
+  display: inline;
+}
+
+.header-menu-item-link {
+  padding: 0 15px;
+  line-height: 80px;
+  font-weight: 900;
+  color: #333 !important;
+}
+
+.header-menu-burger {
+  display: none;
+  float: right;
+  background-color: white;
+  border: none;
+  line-height: 80px;
+}
+
+.show {
+  display: inline-block !important;
+}
+
+@media (max-width: 991.98px) {
+  .header-logo {
+    height: 15px;
+    margin: 32px 0;
+  }
+  .header-menu-item-link {
+    padding: 0 5px;
+  }
+}
+
+@media (max-width: 767.98px) {
+  .header-menu-burger {
+    display: inline-block;
+  }
+  .header-menu {
+    display: none;
+    width: 100%;
+  }
+  .header-menu-item {
+    display: block;
+    border-bottom: 1px solid #cecece;
+  }
+}
+
+.intro-row {
+  width: 100%;
+}
+
+.intro-h-600px {
+  height: 600px;
+}
+
+.intro-h-100 {
+  height: 100%;
+}
+
+.intro-h-2-3 {
+  height: calc(200% / 3);
+}
+
+.intro-h-1-3 {
+  height: calc(100% / 3);
+}
+
+.intro-h-50:first-of-type {
+  margin-bottom: 10px;
+}
+
+.intro-h-50 {
+  height: calc(50% - 5px);
+}
+
+.intro-2-3-col {
+  float: left;
+  margin-right: 10px;
+  width: calc(calc(200% / 3) - 10px);
+}
+.intro-1-3-col {
+  float: right;
+  width: calc(100% / 3);
+}
+
+.intro-1-3-item {
+  width: 100%;
+}
+
+.intro-1-3-col-item {
+  float: left;
+  width: calc(100% / 3);
+}
+.intro-1-3-col-item:nth-of-type(2) {
+  margin-left: 10px;
+  margin-right: 10px;
+  width: calc(calc(100% / 3) - 20px);
+}
+
+.bg-1 {
+  background: url(../images/slider-1-1200x900.jpg) no-repeat center;
+  background-size: cover;
+}
+.bg-2 {
+  background: url(../images/slider-2-450x600.jpg) no-repeat center;
+  background-size: cover;
+}
+.bg-3 {
+  background: url(../images/slider-3-450x600.jpg) no-repeat center;
+  background-size: cover;
+}
+.bg-4 {
+  background: url(../images/slider-4-450x600.jpg) no-repeat center;
+  background-size: cover;
+}
+.bg-5 {
+  background: url(../images/slider-5-450x600.jpg) no-repeat center;
+  background-size: cover;
+}
+.bg-6 {
+  background: url(../images/slider-6-450x600.jpg) no-repeat center;
+  background-size: cover;
+}
+
+.intro-item-caption {
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 10;
+}
+.caption-title {
+  position: absolute;
+  bottom: 50px;
+  left: 20px;
+}
+.caption-title span {
+  font-size: 25px;
+  font-weight: 800;
+  color: #fff;
+}
+.caption-title b {
+  font-size: 20px;
+  font-weight: 800;
+  color: #fff;
+}
+.caption-info-bar {
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
+  padding: 0;
+}
+.caption-info-bar li {
+  display: inline-block;
+  margin-right: 20px;
+  color: #fff;
+}
+
+.img-bg {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  z-index: 1;
+}
+
+.mr-10x {
+  margin-right: 10px;
+}
+.mt-10x {
+  margin-top: 10px;
+}
+.ml-10x {
+  margin-left: 10px;
+}
+.mb-10x {
+  margin-bottom: 10px;
+}
+
+@media (max-width: 767.98px) {
+  .intro-2-3-col {
+    width: 100%;
+    float: none;
+    margin-right: 0;
+  }
+  .intro-1-3-col {
+    width: 100%;
+  }
+  .intro-1-3-col-item {
+    float: none;
+    width: 100%;
+  }
+  .intro-1-3-col-item:nth-of-type(2) {
+    float: none;
+    width: 100%;
+    margin: 0 0 10px 0;
+  }
+  .intro-h-600px {
+    height: auto;
+  }
+  .intro-h-100 {
+    height: auto;
+  }
+  .intro-h-50 {
+    height: auto;
+  }
+  .intro-h-2-3 {
+    height: auto;
+  }
+  .intro-h-1-3 {
+    height: auto;
+  }
+
+  .h-md-300px {
+    height: 300px;
+    margin-bottom: 10px;
+  }
+}
+.container {
+  width: 100%;
+  margin-top: 50px;
+}
+.main {
+  float: left;
+  width: calc(calc(200% / 3) - 25px);
+  margin-right: 25px;
+}
+
+.main-news {
+  margin-bottom: 20px;
+}
+.main-news-img {
+  width: 100%;
+}
+.main-news-w-50 {
+  width: calc(50% - 25px);
+  float: left;
+  margin-right: 25px;
+}
+
+.main-news-w-50:last-of-type {
+  margin-right: 0px;
+}
+.sidebar {
+  float: right;
+  width: calc(calc(100% / 3) - 25px);
+  margin-left: 25px;
+}
+.sidebar-item {
+  width: 100%;
+  margin-bottom: 40px;
+}
+.sidebar-list {
+  list-style: none;
+  padding: 0;
+}
+.sidebar-list > li {
+  padding: 15px 0;
+  background-color: #f98500 !important;
+  border-bottom: 1px solid #ffffff;
+  text-align: center;
+}
+.popular-post {
+  width: 100%;
+  margin-bottom: 15px;
+}
+.popular-post-img {
+  width: 100px;
+  height: 100px;
+  float: left;
+}
+.popular-post-title {
+  float: right;
+  width: calc(100% - 120px);
+  margin-left: 20px;
+}
+.popular-post-title h3 a b {
+  font-size: 18px;
+}
+.subscribe-form {
+  margin-top: 20px;
+  border: none;
+}
+.subscribe-form-text {
+  padding: 13px 58px 13px 13px;
+  float: left;
+  border: 1px solid #f98500;
+  width: calc(100% - 73px);
+}
+.subscribe-form-text:focus {
+  outline-color: #f98500;
+}
+.subscribe-form button {
+  float: right;
+  width: 45px;
+  height: 43px;
+  border: none;
+  text-align: center;
+  background-color: #f98500;
+  margin-top: -44px;
+  transition: all 0.2s;
+}
+.subscribe-form button i {
+  color: white;
+}
+.subscribe-form button:hover {
+  background-color: black;
+  color: #fff !important;
+  cursor: pointer;
+}
+@media (max-width: 991.98px) {
+  .main {
+    width: 100%;
+    float: none;
+  }
+  .sidebar {
+    width: 100%;
+    float: none;
+    margin: 0 auto;
+  }
+}
+
+@media (max-width: 575.98px) {
+  .main-news-w-50 {
+    width: 100%;
+    float: none;
+  }
 }
