--- a/css/style.css
+++ b/css/style.css
@@ -457,3 +457,130 @@ a:hover > b {
     float: none;
   }
 }
+.footer {
+  background-color: #191919;
+}
+.footer-row {
+  width: 100%;
+  background-color: rgba(25, 25, 25, 0.9);
+}
+.bg-map {
+  background-image: url(../images/map.png);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.footer-col {
+  float: left;
+  width: calc(calc(100% / 3) - 30px);
+  margin-right: 30px;
+}
+.footer-logo {
+  float: left;
+  height: 24px;
+  margin: 28px 0;
+}
+.footer-p {
+  color: #cccccc;
+  line-height: 28px;
+  font-size: 16px;
+}
+.footer-p a {
+  color: #cccccc;
+  font-size: 16px;
+  transition: all 0.2s;
+}
+.footer-p a:hover {
+  color: #f98500;
+}
+.footer-p-padding-20px {
+  padding: 20px 0;
+}
+.footer-section-title {
+  color: #f98500;
+  padding: 30px 0;
+}
+.footer-section-link-item {
+  margin-bottom: 20px;
+}
+.footer-line {
+  background-color: rgba(170, 170, 170, 0.2);
+  height: 1px;
+  margin-bottom: 20px;
+}
+.footer-section-link-item a {
+  color: #cccccc;
+  font-size: 14px;
+  transition: all 0.2s;
+}
+.footer-section-link-item a:hover {
+  color: #f98500;
+}
+.footer-section-link-item p {
+  color: #cccccc;
+  font-size: 14px;
+  padding-top: 15px;
+}
+.footer-menu {
+  float: left;
+  list-style: none;
+  width: 50%;
+  padding: 0;
+}
+.footer-menu li {
+  display: inline-block;
+  padding: 0 20px 20px 0;
+}
+
+.footer-menu li a {
+  color: #cccccc;
+  font-size: 12px;
+  transition: all 0.2s;
+}
+.footer-menu li a:hover {
+  color: #f98500;
+}
+.footer-social-network {
+  list-style: none;
+  padding: 0;
+  float: right;
+  width: 50%;
+  text-align: right;
+}
+.footer-social-network li {
+  padding: 0 0 20px 20px;
+  display: inline-block;
+}
+.footer-social-network li a {
+  color: #cccccc;
+  font-size: 12px;
+}
+.footer-social-network li a i {
+  transition: color 0.2s;
+}
+.footer-social-network li a i:hover {
+  color: #f98500;
+}
+@media (max-width: 575.98px) {
+  .footer-col {
+    float: none;
+    padding: 15px;
+    width: calc(100% - 30px);
+    margin-right: 0;
+  }
+  .footer-menu {
+    float: none;
+    width: 100%;
+    text-align: center;
+  }
+  .footer-menu li {
+    padding: 10px;
+  }
+  .footer-social-network {
+    float: none;
+    width: 100%;
+    text-align: center;
+  }
+  .footer-social-network li {
+    padding: 10px;
+  }
+}
